--- a/amorkLib/vue_library/package.json
+++ b/amorkLib/vue_library/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "element-ui": "^2.4.5",
+    "koa2-cors": "^2.0.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
@@ -28,10 +30,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-<<<<<<< HEAD
-=======
     "less-loader": "^6.2.0",
->>>>>>> user
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
