--- a/amorkLib/vue_library/package.json
+++ b/amorkLib/vue_library/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.4.5",
     "koa2-cors": "^2.0.6",
     "vue": "^2.6.11",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
