--- a/amorkLib/vue_library/package.json
+++ b/amorkLib/vue_library/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "element-ui": "^2.4.5",
     "koa2-cors": "^2.0.6",
+    "loadash": "^1.0.0",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0"
