--- a/amorkLib/vue_library/package.json
+++ b/amorkLib/vue_library/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
+    "echarts": "^4.9.0",
     "element-ui": "^2.4.5",
     "koa2-cors": "^2.0.6",
     "loadash": "^1.0.0",
