--- a/amorkLib/vue_library/package.json
+++ b/amorkLib/vue_library/package.json
@@ -17,7 +17,8 @@
     "loadash": "^1.0.0",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
